--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </style>
 
   <title>VALENTINA LUZ APARICIO</title>
+  <link rel="shortcut icon" type="image/jpg" href="img/favicon.ico"/>
   </head>
+
   <body>
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
