--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
-        <div class="container px-3 py-3">
+        <div class="container pr-5 py-3">
           <img style="display: block; margin-left: auto; margin-right: auto; margin-top: 50px;" src="img/index_03.gif" alt="Valentina Luz">
           <h1 style="font-size: 32px; font-weight: bold; text-align: center; margin-top: 50px;">Hola, estoy construyedo una nueva pagina web.</h1>
           <h1 style="font-size: 32px; font-weight: bold; text-align: center;">Mientras tanto, si queres saber mas de mí, te dejo los siguientes links.!!!</h1>
