--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
   <body>
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
-        <div class="container py-3">
-          <img class="pr-5" style="display: block; margin-left: auto; margin-right: auto; margin-top: 50px;" src="img/index_03.gif" alt="Valentina Luz">
+        <div class="container py-5">
+          <img style="display: block; margin-left: auto; margin-right: auto; margin-top: 50px;" src="img/index_03.gif" alt="Valentina Luz">
           <h1 style="font-size: 32px; font-weight: bold; text-align: center; margin-top: 50px;">Hola, estoy construyedo una nueva pagina web.</h1>
           <h1 style="font-size: 32px; font-weight: bold; text-align: center;">Mientras tanto, si queres saber mas de mí, te dejo los siguientes links.!!!</h1>
         </div>
 
         <div class="container">
       
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-2 py-lg-5">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-2 py-lg-3">
             <!-- <div class="col align-items-center py-3"></div> -->
             <div class="col align-items-center py-3">
               <div>
