--- a/index.html
+++ b/index.html
@@ -32,17 +32,19 @@
 
         <div class="container py-5">
           <img style="display: block; margin-left: auto; margin-right: auto; margin-top: 50px;" src="img/index_03.gif" alt="Valentina Luz">
-          <h1 style="font-size: 32px; font-weight: bold; text-align: center; margin-top: 50px;">Hola, estoy construyedo una nueva pagina web.</h1>
-          <h1 style="font-size: 32px; font-weight: bold; text-align: center;">Mientras tanto, si queres saber mas de mí, te dejo los siguientes links.!!!</h1>
+          <h1 style="font-size: 32px; font-weight: bold; text-align: center; margin-top: 50px;">Hola, estoy construyedo una nueva pagina web. Mientras tanto, si queres saber mas de mí, te dejo los siguientes links.!!!</h1>
+          <h1 style="font-size: 32px; font-weight: bold; text-align: center;">My web is under construction. But you can still know about me in the links below.!!!</h1>
+          <!-- <h1 style="font-size: 32px; font-weight: bold; text-align: center; margin-top: 50px;">My web is under construction.</h1>
+          <h1 style="font-size: 32px; font-weight: bold; text-align: center;">But you can still know about me in the links below.!!!</h1> -->
         </div>
 
         <div class="container">
       
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-2 py-lg-3">
+          <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-3 py-lg-3">
             <!-- <div class="col align-items-center py-3"></div> -->
             <div class="col align-items-center py-3">
               <div>
-                <h2 class="fw-bold mb-0 fs-4 text-center text-lg-right">Electronic Press Kit <a target="_blank" href="pdf/epk2022.pdf"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cloud-download" viewBox="0 0 16 16">
+                <h2 class="font-weight-bolder mb-0 fs-4 text-center text-lg-center">Electronic Press Kit <a target="_blank" href="pdf/epk2022.pdf"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cloud-download" viewBox="0 0 16 16">
                   <path d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"/>
                   <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z"/>
                 </svg></a></h2>
@@ -52,7 +54,18 @@
 
             <div class="col align-items-center py-3">
               <div>
-                <h2 class="fw-bold mb-0 fs-4 text-center text-lg-left">Biografía <a target="_blank" href="pdf/bio2022.pdf"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cloud-download" viewBox="0 0 16 16">
+                <h2 class="font-weight-bolder mb-0 fs-4 text-center text-lg-center">Biografía <a target="_blank" href="pdf/bio2022.pdf"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cloud-download" viewBox="0 0 16 16">
+                  <path d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"/>
+                  <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z"/>
+                </svg></a></h2>
+                <!-- <p class="text-center">Paragraph of text beneath the heading to explain the heading.</p> -->
+              </div>
+            </div>
+
+            <!-- <div class="col align-items-center py-3"></div> -->
+            <div class="col align-items-center py-3">
+              <div>
+                <h2 class="font-weight-bolder mb-0 fs-4 text-center text-lg-center">Resume (English) <a target="_blank" href="pdf/resume_eng.pdf"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cloud-download" viewBox="0 0 16 16">
                   <path d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"/>
                   <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z"/>
                 </svg></a></h2>
