--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
         <div class="container py-5">
           <img style="display: block; margin-left: auto; margin-right: auto; margin-top: 50px;" src="img/index_03.gif" alt="Valentina Luz">
-          <h1 style="font-size: 32px; font-weight: bold; text-align: center; margin-top: 50px;">Hola, estoy construyedo una nueva pagina web. Mientras tanto, si queres saber mas de mí, te dejo los siguientes links.!!!</h1>
-          <h1 style="font-size: 32px; font-weight: bold; text-align: center;">My web is under construction. But you can still know about me in the links below.!!!</h1>
+          <h1 style="font-size: 32px; font-weight: bold; text-align: center; margin-top: 50px;">Estoy construyedo una nueva pagina web, si queres saber mas de mí te dejo los siguientes links.!!!</h1>
+          <h1 style="font-size: 32px; font-weight: bold; text-align: center;">My web is under construction, but you can still know about me in the links below.!!!</h1>
           <!-- <h1 style="font-size: 32px; font-weight: bold; text-align: center; margin-top: 50px;">My web is under construction.</h1>
           <h1 style="font-size: 32px; font-weight: bold; text-align: center;">But you can still know about me in the links below.!!!</h1> -->
         </div>
